# toms

./: .gitignore  AGENTS.md  CODING_AGENT_BRIEF.md  README.md  TODO.md
.github/workflows/: ci.yml  release.yml
config/: perception.yaml  planning.yaml  robot.yaml  task.yaml
config/robots/: cello_follower.yaml  cello_star.yaml
launch/: toms_hardware.launch.py  toms_sim.launch.py
scripts/: dry_run_example.py  fixed_pick.py  goto_captured_poses.py  preflight_offline.py
src/toms_bt/: README.md  package.xml  setup.cfg  setup.py
src/toms_bt/launch/: toms_diagnostics_dryrun.launch.py  toms_hardware.launch.py  toms_hardware_test.launch.py  toms_preflight.launch.py  toms_sim.launch.py
src/toms_bt/test/: test_bt_nodes.py
src/toms_bt/toms_bt/: __init__.py  instrumented_runner.py  (+3 more)
src/toms_core/: README.md  package.xml  setup.cfg  setup.py
src/toms_execution/: README.md  package.xml  setup.cfg  setup.py
src/toms_logging/: README.md  package.xml  setup.cfg  setup.py
src/toms_perception/: README.md  package.xml  setup.cfg  setup.py
src/toms_planning/: README.md  package.xml  setup.cfg  setup.py
src/toms_robot/: README.md  package.xml  setup.cfg  setup.py
src/toms_robot/test/: test_config_loader.py  test_preflight.py
src/toms_robot/toms_robot/: __init__.py  cello_bridge.py  config_loader.py  preflight.py  robot_bridge.py
src/toms_validation/: README.md  package.xml  setup.cfg  setup.py
src/toms_world/: README.md  package.xml  setup.cfg  setup.py
src/toms_world/test/: test_world_state.py
src/toms_world/toms_world/: __init__.py  world_state_manager.py
(+36 files in other folders)
