<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>toms_robot</name>
  <version>0.1.0</version>
  <description>TOMS – robot bridge: joint state, motion commands, gripper interface.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>toms_core</depend>
  <depend>rclpy</depend>
  <test_depend>python3-pytest</test_depend>
  <export><build_type>ament_python</build_type></export>
</package>
